--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a class="nav-link" th:href="@{/addresses}">Addresses</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/address}">Météo</a>
+      </li>
     </ul>
   </div>
 </nav>
